run/resources/public/resources/css/re-com.css
/* ... */
.chosen-rtl .chosen-search input[type="text"] {
  background: url("chosen-sprite.png") no-repeat -28px -20px, #ffffff;
  direction: rtl;
  padding: 4px 5px 4px 20px;
}
@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 144dpi) {
  .chosen-rtl .chosen-search input[type="text"],
  .chosen-container-single .chosen-single abbr,
  .chosen-container-single .chosen-single div b,
  .chosen-container-single .chosen-search input[type="text"],
  .chosen-container-multi .chosen-choices .search-choice .search-choice-close,
  .chosen-container .chosen-results-scroll-down span,
  .chosen-container .chosen-results-scroll-up span {
    background-image: url("chosen-sprite@2x.png") !important;
    background-size: 52px 37px !important;
    background-repeat: no-repeat !important;
  }
}

/*----------------------------------------------------------------------------------------
  ...END OF BOOTSTRAP-CHOSEN SECTION

  bootstrap-chosen additions
----------------------------------------------------------------------------------------*/

/* Mouse hover colour in drop-downs */
.chosen-container .chosen-results li.mouseover {
  background-color: #eeeeee;
  background-image: none;
}

/*----------------------------------------------------------------------------------------
  Bootstrap list-group-item variation
----------------------------------------------------------------------------------------*/
.compact {
    margin: 0;
    height: 19px;
    white-space: nowrap;
    border: none;
    padding: 0;
    overflow: hidden;
    cursor: default;
    font-size: small;
    text-overflow: ellipsis;
}

.list-group-item:hover {
    background-color: #eeeeee;
}

/*----------------------------------------------------------------------------------------
  Custom scrollbars
   - http://css-tricks.com/custom-scrollbars-in-webkit
   - http://codemug.com/html/custom-scrollbars-using-css
----------------------------------------------------------------------------------------*/

::-webkit-scrollbar {
  width: 10px;
  border-radius: 5px;
  background-color: rgba(0,0,0,0.05);
  }
::-webkit-scrollbar:horizontal {
  height:10px;
  }
::-webkit-scrollbar:hover {
  background-color:rgba(0,0,0,0.20);
  }
::-webkit-scrollbar-thumb:horizontal, ::-webkit-scrollbar-thumb:vertical {
  background:rgba(0,0,0,0.25);
  border-radius: 5px;
  }
::-webkit-scrollbar-thumb:horizontal:active, ::-webkit-scrollbar-thumb:vertical:active {
  background:rgba(0,0,0,0.45);
  }

/*----------------------------------------------------------------------------------------
  Override bootstrap input text placeholder colour (it's too dark)
----------------------------------------------------------------------------------------*/

.form-control::-webkit-input-placeholder {
  color: #bbb;
}

/*----------------------------------------------------------------------------------------
  Override bootstrap warning colour (from horrible browny orange to orange)
----------------------------------------------------------------------------------------*/

.has-warning .form-control {
  border-color: #f57c00;
}

.has-warning .form-control:focus {
  border-color: #f57c00;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px rgba(245, 124, 0, 0.6);
}

.has-warning .form-control-feedback {
  color: #f57c00;
}

.has-error .form-control {
  border-color: #d50000;
}

.has-error .form-control:focus {
  border-color: #d50000;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px rgba(213, 0, 0, 0.6);
}

.has-error .form-control-feedback {
  color: #d50000;
}

.alert-warning {
    color:            #ea6b00;
    background-color: #ffecdc;
    border-color:     #faebcc;
}


code {
    margin-right:   0.3em;
    border-radius:  4px;
    color:          #333;
    background:     #eee;
    border:         1px solid #ddd;
    padding:        0.2em 0.5em;
}

.re-code {
    color:          #333;
    background:     #eee;
    font-size:      90%;
    border-radius:  4px;
    border:         1px solid #ddd;
    padding:        0.2em 0.5em;
}



/*----------------------------------------------------------------------------------------
  Required for constraining an application to the height of the browser window
----------------------------------------------------------------------------------------*/

html, body {
    height: 100%;
    margin: 0px;
    padding: 0px;
    color:  #666366
}

/*----------------------------------------------------------------------------------------
  Time component
----------------------------------------------------------------------------------------*/

.time-icon {
  border: 1px solid #bbb;
  border-radius: 0 4px 4px 0;
  background-color: #ddd;
  display: inline-block;
  height: 20px;
  line-height: 20px;
  margin-top: 1px;
  text-align: center;
  vertical-align: middle;
  width: 20px;
}
.time-entry {
  flex:  none;
  padding-left: 2px;
  padding-top:  0px;
  font-size:    11px;
  width:        35px;
}
.test-time {
  font-size:    16px;
}

/*----------------------------------------------------------------------------------------
  md-circle-icon-button
----------------------------------------------------------------------------------------*/

.rc-md-circle-icon-button {
    width:               40px;                  /* material design dimensions */
    height:              40px;
    text-align:          center;             /* to horizontally center the icon */
    border:              1px solid lightgrey;
    border-radius:       50%;
    background-color:    inherit;
    opacity:             0.9;
    -webkit-user-select: none;
}

.rc-md-circle-icon-button > i {
   font-size  : 24px;
   line-height: 40px;               /* to vertically center in surrounding :div */
   color: inherit;
}

.rc-md-circle-icon-button:hover {
    border: 1px solid #428bca;
    color:  #428bca;
}

.rc-circle-smaller {
    width:  26px;
    height: 26px;
}

.rc-circle-smaller > i {
   font-size:   16px;
   line-height: 24px;
}
/* ... */

